--- a/src/Vistas/MenuViajes.form
+++ b/src/Vistas/MenuViajes.form
@@ -105,7 +105,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLblFecha" min="-2" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="jBmxFecha" pref="29" max="32767" attributes="0"/>
+                                  <Component id="jBmxFecha" max="32767" attributes="0"/>
                                   <EmptySpace min="2" pref="2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -140,7 +140,7 @@
         <Component class="javax.swing.JLabel" name="jLblImagen">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagenes/viaje.png"/>
+              <Image iconType="3" name="/Vistas/Imagenes/viaje.png"/>
             </Property>
           </Properties>
         </Component>
@@ -219,7 +219,7 @@
         <Component class="javax.swing.JButton" name="jBtnRegresar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagenes/REGRESAR.png"/>
+              <Image iconType="3" name="/Vistas/Imagenes/REGRESAR.png"/>
             </Property>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="ff" red="ff" type="rgb"/>
