Clase Menu que crea un usuario y busca una salida

--- a/src/Vistas/MenuUsuarios.form
+++ b/src/Vistas/MenuUsuarios.form
@@ -253,7 +253,7 @@
         <Component class="javax.swing.JLabel" name="jLblImg">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagenes/avatar.png"/>
+              <Image iconType="3" name="/Vistas/Imagenes/avatar.png"/>
             </Property>
           </Properties>
         </Component>
@@ -285,7 +285,7 @@
         <Component class="javax.swing.JButton" name="jBtnRegresar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagenes/REGRESAR.png"/>
+              <Image iconType="3" name="/Vistas/Imagenes/REGRESAR.png"/>
             </Property>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="ff" red="ff" type="rgb"/>
