Se añadio animacion(HOVER, ESTILOS DE MOUSE, ETC..) al JFrame de MenuViajes.

--- a/src/Vistas/MenuViajes.form
+++ b/src/Vistas/MenuViajes.form
@@ -147,7 +147,7 @@
                       <Component id="jLblHoraLlegada" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jBmxHoraLlegada" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="14" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jBtnGuardar" min="-2" pref="54" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -234,6 +234,9 @@
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial Rounded MT Bold" size="24" style="3"/>
