--- a/src/Vistas/MenuViajes.form
+++ b/src/Vistas/MenuViajes.form
@@ -250,6 +250,9 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial Rounded MT Bold" size="24" style="3"/>
             </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="33" green="33" red="33" type="rgb"/>
+            </Property>
             <Property name="label" type="java.lang.String" value="GUARDAR"/>
           </Properties>
           <Events>
